--- a/plotly networkx.ipynb
+++ b/plotly networkx.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -32,37 +32,54 @@
    ],
    "source": [
     "# super graph do narumi e da mel\n",
-    "import networkx as nx\n",
-    "import plotly.graph_objs as go\n",
-    "from plotly.offline import download_plotlyjs, init_notebook_mode, plot, iplot\n",
-    "init_notebook_mode(connected=True)\n",
-    "\n",
     "import matplotlib as mpl\n",
     "import matplotlib.cm as cm\n",
     "\n",
+    "import networkx as nx\n",
+    "import plotly.graph_objs as go\n",
+    "from plotly.offline import download_plotlyjs, init_notebook_mode, plot, iplot\n",
+    "init_notebook_mode(connected=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "G = nx.Graph()\n",
+    "\n",
     "G.add_edge('Next', 'BB')\n",
     "G.add_edge('Next', 'Nubank')\n",
     "G.add_edge('Next', 'Itau')\n",
     "G.add_edge('Next', 'XP Investimentos')\n",
+    "\n",
     "G.node['Next']['valor'] = 0\n",
     "G.node['BB']['valor']= 450000\n",
     "G.node['Nubank']['valor'] = 10000\n",
     "G.node['Itau']['valor'] = 100\n",
-    "G.node['XP Investimentos']['valor'] = 89000\n",
-    "\n",
+    "G.node['XP Investimentos']['valor'] = 89000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "vmax = 0\n",
-    "for g in G.nodes:\n",
-    "    if G.nodes[g]['valor'] > vmax:\n",
-    "        vmax = G.nodes[g]['valor']\n",
+    "vmax = max([G.nodes[g]['valor'] for g in G.nodes  if G.nodes[g]['valor'] > vmax])\n",
     "norm = mpl.colors.Normalize(vmin=0, vmax=vmax)\n",
     "cmap = cm.hot\n",
-    "m = cm.ScalarMappable(norm=norm, cmap=cmap)\n",
-    "\n",
-    "\n",
-    "#nx.draw(G, with_labels=True)  \n",
-    "#plt.draw()  \n",
-    "\n",
+    "m = cm.ScalarMappable(norm=norm, cmap=cmap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pos = nx.circular_layout(G)\n",
     "position = pos\n",
     "G.add_nodes_from([(k[0], {'pos':[k[1][0],k[1][1]]}) for k in pos.items()])"
@@ -70,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +189,7 @@
          },
          "mode": "lines",
          "type": "scatter",
-         "uid": "bc0d4512-4fbd-4785-b422-bdc40eedd94c",
+         "uid": "33c12c0d-145c-4f37-9260-45bbd2a9cfca",
          "x": [
           0.9999999999999999,
           0.30901696042448806,
@@ -236,7 +253,7 @@
           "R$ transferidos: 89000"
          ],
          "type": "scatter",
-         "uid": "7e11c83d-8d4b-4d45-b2a2-8b6a4aa8b870",
+         "uid": "c1820efc-6cad-4de6-a378-7fbee63393e4",
          "x": [
           0.9999999999999999,
           0.30901696042448806,
@@ -336,21 +353,21 @@
        "<div>\n",
        "        \n",
        "        \n",
-       "            <div id=\"67543244-827f-4dd0-9f54-22823d8b186d\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
+       "            <div id=\"fb6568fd-0380-4b11-a857-37c6d5cf72c1\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
        "            <script type=\"text/javascript\">\n",
        "                require([\"plotly\"], function(Plotly) {\n",
        "                    window.PLOTLYENV=window.PLOTLYENV || {};\n",
        "                    window.PLOTLYENV.BASE_URL='https://plot.ly';\n",
        "                    \n",
-       "                if (document.getElementById(\"67543244-827f-4dd0-9f54-22823d8b186d\")) {\n",
+       "                if (document.getElementById(\"fb6568fd-0380-4b11-a857-37c6d5cf72c1\")) {\n",
        "                    Plotly.newPlot(\n",
-       "                        '67543244-827f-4dd0-9f54-22823d8b186d',\n",
-       "                        [{\"hoverinfo\": \"none\", \"line\": {\"color\": \"#888\", \"width\": 0.5}, \"mode\": \"lines\", \"type\": \"scatter\", \"uid\": \"f4aba053-4d22-4639-8763-3eb1221c4340\", \"x\": [0.9999999999999999, 0.30901696042448806, null, 0.9999999999999999, -0.8090170945349412, null, 0.9999999999999999, -0.8090169753256495, null, 0.9999999999999999, 0.30901710943610267, null], \"y\": [2.38418583364819e-08, 0.9510565808604344, null, 2.38418583364819e-08, 0.587785218735669, null, 2.38418583364819e-08, -0.5877853498658898, null, 2.38418583364819e-08, -0.9510564735720718, null]}, {\"hoverinfo\": \"text\", \"marker\": {\"color\": [0.5563422027217423, 0.0, 0.0, 1.0], \"colorbar\": {\"thickness\": 15, \"title\": {\"side\": \"right\", \"text\": \"Montante transferido (R$)\"}, \"xanchor\": \"left\"}, \"colorscale\": \"YlGnBu\", \"line\": {\"width\": 2}, \"reversescale\": true, \"showscale\": true, \"size\": 10}, \"mode\": \"markers\", \"text\": [\"R$ transferidos: 0\", \"R$ transferidos: 450000\", \"R$ transferidos: 10000\", \"R$ transferidos: 100\", \"R$ transferidos: 89000\"], \"type\": \"scatter\", \"uid\": \"4c161687-8d4d-4e07-84f0-5363bbda305c\", \"x\": [0.9999999999999999, 0.30901696042448806, -0.8090170945349412, -0.8090169753256495, 0.30901710943610267], \"y\": [2.38418583364819e-08, 0.9510565808604344, 0.587785218735669, -0.5877853498658898, -0.9510564735720718]}],\n",
+       "                        'fb6568fd-0380-4b11-a857-37c6d5cf72c1',\n",
+       "                        [{\"hoverinfo\": \"none\", \"line\": {\"color\": \"#888\", \"width\": 0.5}, \"mode\": \"lines\", \"type\": \"scatter\", \"uid\": \"d072f1de-316d-4313-80da-208d886f8bae\", \"x\": [0.9999999999999999, 0.30901696042448806, null, 0.9999999999999999, -0.8090170945349412, null, 0.9999999999999999, -0.8090169753256495, null, 0.9999999999999999, 0.30901710943610267, null], \"y\": [2.38418583364819e-08, 0.9510565808604344, null, 2.38418583364819e-08, 0.587785218735669, null, 2.38418583364819e-08, -0.5877853498658898, null, 2.38418583364819e-08, -0.9510564735720718, null]}, {\"hoverinfo\": \"text\", \"marker\": {\"color\": [0.5563422027217423, 0.0, 0.0, 1.0], \"colorbar\": {\"thickness\": 15, \"title\": {\"side\": \"right\", \"text\": \"Montante transferido (R$)\"}, \"xanchor\": \"left\"}, \"colorscale\": \"YlGnBu\", \"line\": {\"width\": 2}, \"reversescale\": true, \"showscale\": true, \"size\": 10}, \"mode\": \"markers\", \"text\": [\"R$ transferidos: 0\", \"R$ transferidos: 450000\", \"R$ transferidos: 10000\", \"R$ transferidos: 100\", \"R$ transferidos: 89000\"], \"type\": \"scatter\", \"uid\": \"ca5db36f-3abf-4d73-86c6-147ac31de64f\", \"x\": [0.9999999999999999, 0.30901696042448806, -0.8090170945349412, -0.8090169753256495, 0.30901710943610267], \"y\": [2.38418583364819e-08, 0.9510565808604344, 0.587785218735669, -0.5877853498658898, -0.9510564735720718]}],\n",
        "                        {\"annotations\": [{\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"Next\", \"x\": 0.9999999999999999, \"xref\": \"x\", \"y\": 0.10000002384185834, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"BB\", \"x\": 0.30901696042448806, \"xref\": \"x\", \"y\": 1.0510565808604344, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"Nubank\", \"x\": -0.8090170945349412, \"xref\": \"x\", \"y\": 0.687785218735669, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"Itau\", \"x\": -0.8090169753256495, \"xref\": \"x\", \"y\": -0.48778534986588984, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"XP Investimentos\", \"x\": 0.30901710943610267, \"xref\": \"x\", \"y\": -0.8510564735720718, \"yref\": \"y\"}], \"hovermode\": \"closest\", \"margin\": {\"b\": 20, \"l\": 5, \"r\": 5, \"t\": 40}, \"showlegend\": false, \"title\": {\"font\": {\"size\": 16}, \"text\": \"Super Graph\"}, \"xaxis\": {\"showgrid\": false, \"showticklabels\": false, \"zeroline\": false}, \"yaxis\": {\"showgrid\": false, \"showticklabels\": false, \"zeroline\": false}},\n",
        "                        {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\", \"responsive\": true}\n",
        "                    ).then(function(){\n",
        "                            \n",
-       "var gd = document.getElementById('67543244-827f-4dd0-9f54-22823d8b186d');\n",
+       "var gd = document.getElementById('fb6568fd-0380-4b11-a857-37c6d5cf72c1');\n",
        "var x = new MutationObserver(function (mutations, observer) {{\n",
        "        var display = window.getComputedStyle(gd).display;\n",
        "        if (!display || display === 'none') {{\n",
@@ -387,27 +404,6 @@
     "fig = go.Figure(data=[edge_trace, node_trace],layout=layout)\n",
     "iplot(fig, filename='networkx')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
