--- a/test_easyGraph.ipynb
+++ b/test_easyGraph.ipynb
@@ -2,33 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "        <script type=\"text/javascript\">\n",
-       "        window.PlotlyConfig = {MathJaxConfig: 'local'};\n",
-       "        if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}\n",
-       "        if (typeof require !== 'undefined') {\n",
-       "        require.undef(\"plotly\");\n",
-       "        requirejs.config({\n",
-       "            paths: {\n",
-       "                'plotly': ['https://cdn.plot.ly/plotly-latest.min']\n",
-       "            }\n",
-       "        });\n",
-       "        require(['plotly'], function(Plotly) {\n",
-       "            window._Plotly = Plotly;\n",
-       "        });\n",
-       "        }\n",
-       "        </script>\n",
-       "        "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -46,19 +22,268 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "G = EasyGraph()"
+    "mygraph = EasyGraph()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mygraph.G.add_edge('Next', 'BB')\n",
+    "mygraph.G.add_edge('Next', 'Nubank')\n",
+    "mygraph.G.add_edge('Next', 'Itau')\n",
+    "mygraph.G.add_edge('Next', 'XP Investimentos')\n",
+    "\n",
+    "mygraph.G.node['Next']['valor'] = 0\n",
+    "mygraph.G.node['BB']['valor']= 450000\n",
+    "mygraph.G.node['Nubank']['valor'] = 10000\n",
+    "mygraph.G.node['Itau']['valor'] = 100\n",
+    "mygraph.G.node['XP Investimentos']['valor'] = 89000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "config": {
+        "linkText": "Export to plot.ly",
+        "plotlyServerURL": "https://plot.ly",
+        "responsive": true,
+        "showLink": false
+       },
+       "data": [
+        {
+         "hoverinfo": "none",
+         "line": {
+          "color": "#888",
+          "width": 0.5
+         },
+         "mode": "lines",
+         "type": "scatter",
+         "uid": "a46c28ef-4810-492b-b4df-7a19bbd3941c",
+         "x": [
+          0.9999999999999999,
+          0.30901696042448806,
+          null,
+          0.9999999999999999,
+          -0.8090170945349412,
+          null,
+          0.9999999999999999,
+          -0.8090169753256495,
+          null,
+          0.9999999999999999,
+          0.30901710943610267,
+          null
+         ],
+         "y": [
+          2.38418583364819e-08,
+          0.9510565808604344,
+          null,
+          2.38418583364819e-08,
+          0.587785218735669,
+          null,
+          2.38418583364819e-08,
+          -0.5877853498658898,
+          null,
+          2.38418583364819e-08,
+          -0.9510564735720718,
+          null
+         ]
+        },
+        {
+         "hoverinfo": "text",
+         "marker": {
+          "color": [
+           0.5563422027217423,
+           0,
+           0,
+           1
+          ],
+          "colorbar": {
+           "thickness": 15,
+           "title": {
+            "side": "right",
+            "text": "Montante transferido (R$)"
+           },
+           "xanchor": "left"
+          },
+          "colorscale": "YlGnBu",
+          "line": {
+           "width": 2
+          },
+          "reversescale": true,
+          "showscale": true,
+          "size": 10
+         },
+         "mode": "markers",
+         "text": [
+          "R$ transferidos: 0",
+          "R$ transferidos: 450000",
+          "R$ transferidos: 10000",
+          "R$ transferidos: 100",
+          "R$ transferidos: 89000"
+         ],
+         "type": "scatter",
+         "uid": "5e09f017-11a2-4fab-ba75-0b2a77950cef",
+         "x": [
+          0.9999999999999999,
+          0.30901696042448806,
+          -0.8090170945349412,
+          -0.8090169753256495,
+          0.30901710943610267
+         ],
+         "y": [
+          2.38418583364819e-08,
+          0.9510565808604344,
+          0.587785218735669,
+          -0.5877853498658898,
+          -0.9510564735720718
+         ]
+        }
+       ],
+       "layout": {
+        "annotations": [
+         {
+          "ax": 0,
+          "ay": 20,
+          "showarrow": false,
+          "text": "Next",
+          "x": 0.9999999999999999,
+          "xref": "x",
+          "y": 0.10000002384185834,
+          "yref": "y"
+         },
+         {
+          "ax": 0,
+          "ay": 20,
+          "showarrow": false,
+          "text": "BB",
+          "x": 0.30901696042448806,
+          "xref": "x",
+          "y": 1.0510565808604344,
+          "yref": "y"
+         },
+         {
+          "ax": 0,
+          "ay": 20,
+          "showarrow": false,
+          "text": "Nubank",
+          "x": -0.8090170945349412,
+          "xref": "x",
+          "y": 0.687785218735669,
+          "yref": "y"
+         },
+         {
+          "ax": 0,
+          "ay": 20,
+          "showarrow": false,
+          "text": "Itau",
+          "x": -0.8090169753256495,
+          "xref": "x",
+          "y": -0.48778534986588984,
+          "yref": "y"
+         },
+         {
+          "ax": 0,
+          "ay": 20,
+          "showarrow": false,
+          "text": "XP Investimentos",
+          "x": 0.30901710943610267,
+          "xref": "x",
+          "y": -0.8510564735720718,
+          "yref": "y"
+         }
+        ],
+        "hovermode": "closest",
+        "margin": {
+         "b": 20,
+         "l": 5,
+         "r": 5,
+         "t": 40
+        },
+        "showlegend": false,
+        "title": {
+         "font": {
+          "size": 16
+         },
+         "text": "Super Graph"
+        },
+        "xaxis": {
+         "showgrid": false,
+         "showticklabels": false,
+         "zeroline": false
+        },
+        "yaxis": {
+         "showgrid": false,
+         "showticklabels": false,
+         "zeroline": false
+        }
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "        \n",
+       "        \n",
+       "            <div id=\"08ff6d24-e069-4e4e-944e-f4fcd76d6abc\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
+       "            <script type=\"text/javascript\">\n",
+       "                require([\"plotly\"], function(Plotly) {\n",
+       "                    window.PLOTLYENV=window.PLOTLYENV || {};\n",
+       "                    window.PLOTLYENV.BASE_URL='https://plot.ly';\n",
+       "                    \n",
+       "                if (document.getElementById(\"08ff6d24-e069-4e4e-944e-f4fcd76d6abc\")) {\n",
+       "                    Plotly.newPlot(\n",
+       "                        '08ff6d24-e069-4e4e-944e-f4fcd76d6abc',\n",
+       "                        [{\"hoverinfo\": \"none\", \"line\": {\"color\": \"#888\", \"width\": 0.5}, \"mode\": \"lines\", \"type\": \"scatter\", \"uid\": \"49d8397b-3f4e-4f51-a5ed-601138d85428\", \"x\": [0.9999999999999999, 0.30901696042448806, null, 0.9999999999999999, -0.8090170945349412, null, 0.9999999999999999, -0.8090169753256495, null, 0.9999999999999999, 0.30901710943610267, null], \"y\": [2.38418583364819e-08, 0.9510565808604344, null, 2.38418583364819e-08, 0.587785218735669, null, 2.38418583364819e-08, -0.5877853498658898, null, 2.38418583364819e-08, -0.9510564735720718, null]}, {\"hoverinfo\": \"text\", \"marker\": {\"color\": [0.5563422027217423, 0.0, 0.0, 1.0], \"colorbar\": {\"thickness\": 15, \"title\": {\"side\": \"right\", \"text\": \"Montante transferido (R$)\"}, \"xanchor\": \"left\"}, \"colorscale\": \"YlGnBu\", \"line\": {\"width\": 2}, \"reversescale\": true, \"showscale\": true, \"size\": 10}, \"mode\": \"markers\", \"text\": [\"R$ transferidos: 0\", \"R$ transferidos: 450000\", \"R$ transferidos: 10000\", \"R$ transferidos: 100\", \"R$ transferidos: 89000\"], \"type\": \"scatter\", \"uid\": \"3345d1c5-40a6-4728-a232-99a609e106fb\", \"x\": [0.9999999999999999, 0.30901696042448806, -0.8090170945349412, -0.8090169753256495, 0.30901710943610267], \"y\": [2.38418583364819e-08, 0.9510565808604344, 0.587785218735669, -0.5877853498658898, -0.9510564735720718]}],\n",
+       "                        {\"annotations\": [{\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"Next\", \"x\": 0.9999999999999999, \"xref\": \"x\", \"y\": 0.10000002384185834, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"BB\", \"x\": 0.30901696042448806, \"xref\": \"x\", \"y\": 1.0510565808604344, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"Nubank\", \"x\": -0.8090170945349412, \"xref\": \"x\", \"y\": 0.687785218735669, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"Itau\", \"x\": -0.8090169753256495, \"xref\": \"x\", \"y\": -0.48778534986588984, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"XP Investimentos\", \"x\": 0.30901710943610267, \"xref\": \"x\", \"y\": -0.8510564735720718, \"yref\": \"y\"}], \"hovermode\": \"closest\", \"margin\": {\"b\": 20, \"l\": 5, \"r\": 5, \"t\": 40}, \"showlegend\": false, \"title\": {\"font\": {\"size\": 16}, \"text\": \"Super Graph\"}, \"xaxis\": {\"showgrid\": false, \"showticklabels\": false, \"zeroline\": false}, \"yaxis\": {\"showgrid\": false, \"showticklabels\": false, \"zeroline\": false}},\n",
+       "                        {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\", \"responsive\": true}\n",
+       "                    ).then(function(){\n",
+       "                            \n",
+       "var gd = document.getElementById('08ff6d24-e069-4e4e-944e-f4fcd76d6abc');\n",
+       "var x = new MutationObserver(function (mutations, observer) {{\n",
+       "        var display = window.getComputedStyle(gd).display;\n",
+       "        if (!display || display === 'none') {{\n",
+       "            console.log([gd, 'removed!']);\n",
+       "            Plotly.purge(gd);\n",
+       "            observer.disconnect();\n",
+       "        }}\n",
+       "}});\n",
+       "\n",
+       "// Listen for the removal of the full notebook cells\n",
+       "var notebookContainer = gd.closest('#notebook-container');\n",
+       "if (notebookContainer) {{\n",
+       "    x.observe(notebookContainer, {childList: true});\n",
+       "}}\n",
+       "\n",
+       "// Listen for the clearing of the current output cell\n",
+       "var outputEl = gd.closest('.output');\n",
+       "if (outputEl) {{\n",
+       "    x.observe(outputEl, {childList: true});\n",
+       "}}\n",
+       "\n",
+       "                        })\n",
+       "                };\n",
+       "                });\n",
+       "            </script>\n",
+       "        </div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "mygraph.plot()"
+   ]
   },
   {
    "cell_type": "code",
