--- a/test_easyGraph.ipynb
+++ b/test_easyGraph.ipynb
@@ -2,9 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "        <script type=\"text/javascript\">\n",
+       "        window.PlotlyConfig = {MathJaxConfig: 'local'};\n",
+       "        if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}\n",
+       "        if (typeof require !== 'undefined') {\n",
+       "        require.undef(\"plotly\");\n",
+       "        requirejs.config({\n",
+       "            paths: {\n",
+       "                'plotly': ['https://cdn.plot.ly/plotly-latest.min']\n",
+       "            }\n",
+       "        });\n",
+       "        require(['plotly'], function(Plotly) {\n",
+       "            window._Plotly = Plotly;\n",
+       "        });\n",
+       "        }\n",
+       "        </script>\n",
+       "        "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -22,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,25 +55,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.G.add_edge('Next', 'BB')\n",
-    "mygraph.G.add_edge('Next', 'Nubank')\n",
-    "mygraph.G.add_edge('Next', 'Itau')\n",
-    "mygraph.G.add_edge('Next', 'XP Investimentos')\n",
+    "mygraph.add_node('Next', {'valor':45000})\n",
+    "mygraph.add_node('Nubank', {'valor':45000})\n",
+    "mygraph.add_node('Itau', {'valor':45000})\n",
+    "mygraph.add_node('XP Investimentos', {'valor':45000})\n",
+    "mygraph.add_node('BB', {'valor':45000})\n",
     "\n",
-    "mygraph.G.node['Next']['valor'] = 0\n",
-    "mygraph.G.node['BB']['valor']= 450000\n",
-    "mygraph.G.node['Nubank']['valor'] = 10000\n",
-    "mygraph.G.node['Itau']['valor'] = 100\n",
-    "mygraph.G.node['XP Investimentos']['valor'] = 89000"
+    "\n",
+    "mygraph.add_edge('Next', 'BB', {'valor': 45000})\n",
+    "mygraph.add_edge('Next', 'Nubank', {'valor': 10000})\n",
+    "mygraph.add_edge('Next', 'Itau', {'valor': 30000})\n",
+    "mygraph.add_edge('Next', 'XP Investimentos', {'valor': 30000})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "45000"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mygraph.G.nodes['Next']['valor']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -70,8 +115,11 @@
          },
          "mode": "lines",
          "type": "scatter",
-         "uid": "a46c28ef-4810-492b-b4df-7a19bbd3941c",
+         "uid": "7c73baf1-07ee-4b7e-a9fd-72bf774bb8d2",
          "x": [
+          0.9999999999999999,
+          0.30901710943610267,
+          null,
           0.9999999999999999,
           0.30901696042448806,
           null,
@@ -80,12 +128,12 @@
           null,
           0.9999999999999999,
           -0.8090169753256495,
-          null,
-          0.9999999999999999,
-          0.30901710943610267,
           null
          ],
          "y": [
+          2.38418583364819e-08,
+          -0.9510564735720718,
+          null,
           2.38418583364819e-08,
           0.9510565808604344,
           null,
@@ -94,9 +142,6 @@
           null,
           2.38418583364819e-08,
           -0.5877853498658898,
-          null,
-          2.38418583364819e-08,
-          -0.9510564735720718,
           null
          ]
         },
@@ -104,7 +149,7 @@
          "hoverinfo": "text",
          "marker": {
           "color": [
-           0.5563422027217423,
+           0.0416,
            0,
            0,
            1
@@ -113,7 +158,7 @@
            "thickness": 15,
            "title": {
             "side": "right",
-            "text": "Montante transferido (R$)"
+            "text": "coco"
            },
            "xanchor": "left"
           },
@@ -127,14 +172,14 @@
          },
          "mode": "markers",
          "text": [
-          "R$ transferidos: 0",
-          "R$ transferidos: 450000",
-          "R$ transferidos: 10000",
-          "R$ transferidos: 100",
-          "R$ transferidos: 89000"
+          "baba45000",
+          "baba45000",
+          "baba45000",
+          "baba45000",
+          "baba45000"
          ],
          "type": "scatter",
-         "uid": "5e09f017-11a2-4fab-ba75-0b2a77950cef",
+         "uid": "6334b489-5a4e-4a5a-97da-a65ce5aff808",
          "x": [
           0.9999999999999999,
           0.30901696042448806,
@@ -167,7 +212,7 @@
           "ax": 0,
           "ay": 20,
           "showarrow": false,
-          "text": "BB",
+          "text": "Nubank",
           "x": 0.30901696042448806,
           "xref": "x",
           "y": 1.0510565808604344,
@@ -177,7 +222,7 @@
           "ax": 0,
           "ay": 20,
           "showarrow": false,
-          "text": "Nubank",
+          "text": "Itau",
           "x": -0.8090170945349412,
           "xref": "x",
           "y": 0.687785218735669,
@@ -187,7 +232,7 @@
           "ax": 0,
           "ay": 20,
           "showarrow": false,
-          "text": "Itau",
+          "text": "XP Investimentos",
           "x": -0.8090169753256495,
           "xref": "x",
           "y": -0.48778534986588984,
@@ -197,7 +242,7 @@
           "ax": 0,
           "ay": 20,
           "showarrow": false,
-          "text": "XP Investimentos",
+          "text": "BB",
           "x": 0.30901710943610267,
           "xref": "x",
           "y": -0.8510564735720718,
@@ -216,7 +261,7 @@
          "font": {
           "size": 16
          },
-         "text": "Super Graph"
+         "text": "coco"
         },
         "xaxis": {
          "showgrid": false,
@@ -234,21 +279,21 @@
        "<div>\n",
        "        \n",
        "        \n",
-       "            <div id=\"08ff6d24-e069-4e4e-944e-f4fcd76d6abc\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
+       "            <div id=\"a19330c2-a910-4b70-a1f9-93addc403dd4\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
        "            <script type=\"text/javascript\">\n",
        "                require([\"plotly\"], function(Plotly) {\n",
        "                    window.PLOTLYENV=window.PLOTLYENV || {};\n",
        "                    window.PLOTLYENV.BASE_URL='https://plot.ly';\n",
        "                    \n",
-       "                if (document.getElementById(\"08ff6d24-e069-4e4e-944e-f4fcd76d6abc\")) {\n",
+       "                if (document.getElementById(\"a19330c2-a910-4b70-a1f9-93addc403dd4\")) {\n",
        "                    Plotly.newPlot(\n",
-       "                        '08ff6d24-e069-4e4e-944e-f4fcd76d6abc',\n",
-       "                        [{\"hoverinfo\": \"none\", \"line\": {\"color\": \"#888\", \"width\": 0.5}, \"mode\": \"lines\", \"type\": \"scatter\", \"uid\": \"49d8397b-3f4e-4f51-a5ed-601138d85428\", \"x\": [0.9999999999999999, 0.30901696042448806, null, 0.9999999999999999, -0.8090170945349412, null, 0.9999999999999999, -0.8090169753256495, null, 0.9999999999999999, 0.30901710943610267, null], \"y\": [2.38418583364819e-08, 0.9510565808604344, null, 2.38418583364819e-08, 0.587785218735669, null, 2.38418583364819e-08, -0.5877853498658898, null, 2.38418583364819e-08, -0.9510564735720718, null]}, {\"hoverinfo\": \"text\", \"marker\": {\"color\": [0.5563422027217423, 0.0, 0.0, 1.0], \"colorbar\": {\"thickness\": 15, \"title\": {\"side\": \"right\", \"text\": \"Montante transferido (R$)\"}, \"xanchor\": \"left\"}, \"colorscale\": \"YlGnBu\", \"line\": {\"width\": 2}, \"reversescale\": true, \"showscale\": true, \"size\": 10}, \"mode\": \"markers\", \"text\": [\"R$ transferidos: 0\", \"R$ transferidos: 450000\", \"R$ transferidos: 10000\", \"R$ transferidos: 100\", \"R$ transferidos: 89000\"], \"type\": \"scatter\", \"uid\": \"3345d1c5-40a6-4728-a232-99a609e106fb\", \"x\": [0.9999999999999999, 0.30901696042448806, -0.8090170945349412, -0.8090169753256495, 0.30901710943610267], \"y\": [2.38418583364819e-08, 0.9510565808604344, 0.587785218735669, -0.5877853498658898, -0.9510564735720718]}],\n",
-       "                        {\"annotations\": [{\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"Next\", \"x\": 0.9999999999999999, \"xref\": \"x\", \"y\": 0.10000002384185834, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"BB\", \"x\": 0.30901696042448806, \"xref\": \"x\", \"y\": 1.0510565808604344, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"Nubank\", \"x\": -0.8090170945349412, \"xref\": \"x\", \"y\": 0.687785218735669, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"Itau\", \"x\": -0.8090169753256495, \"xref\": \"x\", \"y\": -0.48778534986588984, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"XP Investimentos\", \"x\": 0.30901710943610267, \"xref\": \"x\", \"y\": -0.8510564735720718, \"yref\": \"y\"}], \"hovermode\": \"closest\", \"margin\": {\"b\": 20, \"l\": 5, \"r\": 5, \"t\": 40}, \"showlegend\": false, \"title\": {\"font\": {\"size\": 16}, \"text\": \"Super Graph\"}, \"xaxis\": {\"showgrid\": false, \"showticklabels\": false, \"zeroline\": false}, \"yaxis\": {\"showgrid\": false, \"showticklabels\": false, \"zeroline\": false}},\n",
+       "                        'a19330c2-a910-4b70-a1f9-93addc403dd4',\n",
+       "                        [{\"hoverinfo\": \"none\", \"line\": {\"color\": \"#888\", \"width\": 0.5}, \"mode\": \"lines\", \"type\": \"scatter\", \"uid\": \"3eeb4d1a-1e56-46fd-87e1-741309be373a\", \"x\": [0.9999999999999999, 0.30901710943610267, null, 0.9999999999999999, 0.30901696042448806, null, 0.9999999999999999, -0.8090170945349412, null, 0.9999999999999999, -0.8090169753256495, null], \"y\": [2.38418583364819e-08, -0.9510564735720718, null, 2.38418583364819e-08, 0.9510565808604344, null, 2.38418583364819e-08, 0.587785218735669, null, 2.38418583364819e-08, -0.5877853498658898, null]}, {\"hoverinfo\": \"text\", \"marker\": {\"color\": [0.0416, 0.0, 0.0, 1.0], \"colorbar\": {\"thickness\": 15, \"title\": {\"side\": \"right\", \"text\": \"coco\"}, \"xanchor\": \"left\"}, \"colorscale\": \"YlGnBu\", \"line\": {\"width\": 2}, \"reversescale\": true, \"showscale\": true, \"size\": 10}, \"mode\": \"markers\", \"text\": [\"baba45000\", \"baba45000\", \"baba45000\", \"baba45000\", \"baba45000\"], \"type\": \"scatter\", \"uid\": \"247e2fad-dce2-4faf-8fef-db5db88a8242\", \"x\": [0.9999999999999999, 0.30901696042448806, -0.8090170945349412, -0.8090169753256495, 0.30901710943610267], \"y\": [2.38418583364819e-08, 0.9510565808604344, 0.587785218735669, -0.5877853498658898, -0.9510564735720718]}],\n",
+       "                        {\"annotations\": [{\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"Next\", \"x\": 0.9999999999999999, \"xref\": \"x\", \"y\": 0.10000002384185834, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"Nubank\", \"x\": 0.30901696042448806, \"xref\": \"x\", \"y\": 1.0510565808604344, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"Itau\", \"x\": -0.8090170945349412, \"xref\": \"x\", \"y\": 0.687785218735669, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"XP Investimentos\", \"x\": -0.8090169753256495, \"xref\": \"x\", \"y\": -0.48778534986588984, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"BB\", \"x\": 0.30901710943610267, \"xref\": \"x\", \"y\": -0.8510564735720718, \"yref\": \"y\"}], \"hovermode\": \"closest\", \"margin\": {\"b\": 20, \"l\": 5, \"r\": 5, \"t\": 40}, \"showlegend\": false, \"title\": {\"font\": {\"size\": 16}, \"text\": \"coco\"}, \"xaxis\": {\"showgrid\": false, \"showticklabels\": false, \"zeroline\": false}, \"yaxis\": {\"showgrid\": false, \"showticklabels\": false, \"zeroline\": false}},\n",
        "                        {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\", \"responsive\": true}\n",
        "                    ).then(function(){\n",
        "                            \n",
-       "var gd = document.getElementById('08ff6d24-e069-4e4e-944e-f4fcd76d6abc');\n",
+       "var gd = document.getElementById('a19330c2-a910-4b70-a1f9-93addc403dd4');\n",
        "var x = new MutationObserver(function (mutations, observer) {{\n",
        "        var display = window.getComputedStyle(gd).display;\n",
        "        if (!display || display === 'none') {{\n",
@@ -282,8 +327,15 @@
     }
    ],
    "source": [
-    "mygraph.plot()"
+    "mygraph.plot(title='coco', ylabel= 'baba',field='valor')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
