--- a/test_easyGraph.ipynb
+++ b/test_easyGraph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,46 +55,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.add_node('Next', {'valor':45000})\n",
-    "mygraph.add_node('Nubank', {'valor':45000})\n",
-    "mygraph.add_node('Itau', {'valor':45000})\n",
-    "mygraph.add_node('XP Investimentos', {'valor':45000})\n",
-    "mygraph.add_node('BB', {'valor':45000})\n",
+    "# adicionando nodes e definindo propried\n",
+    "mygraph.add_node('Next', {'clientes':4500})\n",
+    "mygraph.add_node('Nubank', {'clientes':8000})\n",
+    "mygraph.add_node('Itau', {'clientes':8000})\n",
+    "mygraph.add_node('XP Investimentos', {'clientes':45000})\n",
+    "mygraph.add_node('BB', {'clientes':3000})\n",
     "\n",
-    "\n",
-    "mygraph.add_edge('Next', 'BB', {'valor': 45000})\n",
-    "mygraph.add_edge('Next', 'Nubank', {'valor': 10000})\n",
-    "mygraph.add_edge('Next', 'Itau', {'valor': 30000})\n",
-    "mygraph.add_edge('Next', 'XP Investimentos', {'valor': 30000})"
+    "# adicionando arestas e propriedades\n",
+    "mygraph.add_edge('Next', 'BB', {'enviado': 45000})\n",
+    "mygraph.add_edge('Next', 'Nubank', {'enviado': 10000})\n",
+    "mygraph.add_edge('Next', 'Itau', {'enviado': 30000})\n",
+    "mygraph.add_edge('Next', 'XP Investimentos', {'enviado': 30000})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "45000"
-      ]
-     },
-     "execution_count": 155,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mygraph.G.nodes['Next']['valor']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +96,7 @@
          },
          "mode": "lines",
          "type": "scatter",
-         "uid": "7c73baf1-07ee-4b7e-a9fd-72bf774bb8d2",
+         "uid": "aa0ac8a5-aa1d-4c8d-8faa-537da1cca416",
          "x": [
           0.9999999999999999,
           0.30901710943610267,
@@ -172,14 +153,14 @@
          },
          "mode": "markers",
          "text": [
-          "baba45000",
-          "baba45000",
-          "baba45000",
-          "baba45000",
-          "baba45000"
+          "baba 4500",
+          "baba 8000",
+          "baba 8000",
+          "baba 45000",
+          "baba 3000"
          ],
          "type": "scatter",
-         "uid": "6334b489-5a4e-4a5a-97da-a65ce5aff808",
+         "uid": "b97fb6ea-6629-4893-bdb8-6cb05b22162c",
          "x": [
           0.9999999999999999,
           0.30901696042448806,
@@ -279,21 +260,21 @@
        "<div>\n",
        "        \n",
        "        \n",
-       "            <div id=\"a19330c2-a910-4b70-a1f9-93addc403dd4\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
+       "            <div id=\"97f65bab-b717-41f1-8b66-b9a9f220ad03\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
        "            <script type=\"text/javascript\">\n",
        "                require([\"plotly\"], function(Plotly) {\n",
        "                    window.PLOTLYENV=window.PLOTLYENV || {};\n",
        "                    window.PLOTLYENV.BASE_URL='https://plot.ly';\n",
        "                    \n",
-       "                if (document.getElementById(\"a19330c2-a910-4b70-a1f9-93addc403dd4\")) {\n",
+       "                if (document.getElementById(\"97f65bab-b717-41f1-8b66-b9a9f220ad03\")) {\n",
        "                    Plotly.newPlot(\n",
-       "                        'a19330c2-a910-4b70-a1f9-93addc403dd4',\n",
-       "                        [{\"hoverinfo\": \"none\", \"line\": {\"color\": \"#888\", \"width\": 0.5}, \"mode\": \"lines\", \"type\": \"scatter\", \"uid\": \"3eeb4d1a-1e56-46fd-87e1-741309be373a\", \"x\": [0.9999999999999999, 0.30901710943610267, null, 0.9999999999999999, 0.30901696042448806, null, 0.9999999999999999, -0.8090170945349412, null, 0.9999999999999999, -0.8090169753256495, null], \"y\": [2.38418583364819e-08, -0.9510564735720718, null, 2.38418583364819e-08, 0.9510565808604344, null, 2.38418583364819e-08, 0.587785218735669, null, 2.38418583364819e-08, -0.5877853498658898, null]}, {\"hoverinfo\": \"text\", \"marker\": {\"color\": [0.0416, 0.0, 0.0, 1.0], \"colorbar\": {\"thickness\": 15, \"title\": {\"side\": \"right\", \"text\": \"coco\"}, \"xanchor\": \"left\"}, \"colorscale\": \"YlGnBu\", \"line\": {\"width\": 2}, \"reversescale\": true, \"showscale\": true, \"size\": 10}, \"mode\": \"markers\", \"text\": [\"baba45000\", \"baba45000\", \"baba45000\", \"baba45000\", \"baba45000\"], \"type\": \"scatter\", \"uid\": \"247e2fad-dce2-4faf-8fef-db5db88a8242\", \"x\": [0.9999999999999999, 0.30901696042448806, -0.8090170945349412, -0.8090169753256495, 0.30901710943610267], \"y\": [2.38418583364819e-08, 0.9510565808604344, 0.587785218735669, -0.5877853498658898, -0.9510564735720718]}],\n",
+       "                        '97f65bab-b717-41f1-8b66-b9a9f220ad03',\n",
+       "                        [{\"hoverinfo\": \"none\", \"line\": {\"color\": \"#888\", \"width\": 0.5}, \"mode\": \"lines\", \"type\": \"scatter\", \"uid\": \"a9536988-2c82-4f58-97bc-50da60d33662\", \"x\": [0.9999999999999999, 0.30901710943610267, null, 0.9999999999999999, 0.30901696042448806, null, 0.9999999999999999, -0.8090170945349412, null, 0.9999999999999999, -0.8090169753256495, null], \"y\": [2.38418583364819e-08, -0.9510564735720718, null, 2.38418583364819e-08, 0.9510565808604344, null, 2.38418583364819e-08, 0.587785218735669, null, 2.38418583364819e-08, -0.5877853498658898, null]}, {\"hoverinfo\": \"text\", \"marker\": {\"color\": [0.0416, 0.0, 0.0, 1.0], \"colorbar\": {\"thickness\": 15, \"title\": {\"side\": \"right\", \"text\": \"coco\"}, \"xanchor\": \"left\"}, \"colorscale\": \"YlGnBu\", \"line\": {\"width\": 2}, \"reversescale\": true, \"showscale\": true, \"size\": 10}, \"mode\": \"markers\", \"text\": [\"baba 4500\", \"baba 8000\", \"baba 8000\", \"baba 45000\", \"baba 3000\"], \"type\": \"scatter\", \"uid\": \"f74ee1c5-45bc-42c9-ad87-7760649dff3d\", \"x\": [0.9999999999999999, 0.30901696042448806, -0.8090170945349412, -0.8090169753256495, 0.30901710943610267], \"y\": [2.38418583364819e-08, 0.9510565808604344, 0.587785218735669, -0.5877853498658898, -0.9510564735720718]}],\n",
        "                        {\"annotations\": [{\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"Next\", \"x\": 0.9999999999999999, \"xref\": \"x\", \"y\": 0.10000002384185834, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"Nubank\", \"x\": 0.30901696042448806, \"xref\": \"x\", \"y\": 1.0510565808604344, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"Itau\", \"x\": -0.8090170945349412, \"xref\": \"x\", \"y\": 0.687785218735669, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"XP Investimentos\", \"x\": -0.8090169753256495, \"xref\": \"x\", \"y\": -0.48778534986588984, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"BB\", \"x\": 0.30901710943610267, \"xref\": \"x\", \"y\": -0.8510564735720718, \"yref\": \"y\"}], \"hovermode\": \"closest\", \"margin\": {\"b\": 20, \"l\": 5, \"r\": 5, \"t\": 40}, \"showlegend\": false, \"title\": {\"font\": {\"size\": 16}, \"text\": \"coco\"}, \"xaxis\": {\"showgrid\": false, \"showticklabels\": false, \"zeroline\": false}, \"yaxis\": {\"showgrid\": false, \"showticklabels\": false, \"zeroline\": false}},\n",
        "                        {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\", \"responsive\": true}\n",
        "                    ).then(function(){\n",
        "                            \n",
-       "var gd = document.getElementById('a19330c2-a910-4b70-a1f9-93addc403dd4');\n",
+       "var gd = document.getElementById('97f65bab-b717-41f1-8b66-b9a9f220ad03');\n",
        "var x = new MutationObserver(function (mutations, observer) {{\n",
        "        var display = window.getComputedStyle(gd).display;\n",
        "        if (!display || display === 'none') {{\n",
@@ -327,7 +308,7 @@
     }
    ],
    "source": [
-    "mygraph.plot(title='coco', ylabel= 'baba',field='valor')"
+    "mygraph.plot(title='coco', node_label= 'baba',field='clientes')"
    ]
   },
   {
